generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                  String                  @id @default(cuid())
  email               String                  @unique
  passwordHash        String
  emailVerified       Boolean                 @default(false)
  verifyToken         String?                 @unique
  verifyTokenExp      DateTime?
  createdAt           DateTime                @default(now())
  username            String                  @unique
  avatarUrl           String                  @default("")
  workspaces          Workspace[]
  invitationsSent     WorkspaceInvitation[]   @relation("InvitationsSent")
  invitationsReceived WorkspaceInvitation[]   @relation("InvitationsReceived")
  collaborations      WorkspaceCollaborator[]
  submissions         Submission[]
  fileVersions        FileVersion[]
}

model Problem {
  id          String       @id @default(cuid())
  slug        String       @unique
  title       String
  statement   String
  difficulty  Int          @default(1)
  testCases   Json
  examples    Json         @default("[]")
  maxSteps    Int?
  createdAt   DateTime     @default(now())
  submissions Submission[]
}

model Submission {
  id          String   @id @default(cuid())
  userId      String
  problemId   String
  code        String
  passed      Boolean
  testsPassed Int
  testsTotal  Int
  createdAt   DateTime @default(now())
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  problem     Problem  @relation(fields: [problemId], references: [id], onDelete: Cascade)

  @@index([userId, problemId])
  @@index([problemId, passed])
}

model Workspace {
  id            String                  @id @default(cuid())
  userId        String
  name          String
  isPublic      Boolean                 @default(false)
  createdAt     DateTime                @default(now())
  forkedFromId  String?
  user          User                    @relation(fields: [userId], references: [id], onDelete: Cascade)
  files         PseudoFile[]
  forkedFrom    Workspace?              @relation("WorkspaceForks", fields: [forkedFromId], references: [id], onDelete: SetNull)
  forks         Workspace[]             @relation("WorkspaceForks")
  invitations   WorkspaceInvitation[]
  collaborators WorkspaceCollaborator[]

  @@unique([userId, name])
}

model WorkspaceInvitation {
  id          String    @id @default(cuid())
  workspaceId String
  fromUserId  String
  toUserId    String
  status      String    @default("PENDING")
  seenByFrom  Boolean   @default(false)
  seenByTo    Boolean   @default(false)
  createdAt   DateTime  @default(now())
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  from        User      @relation("InvitationsSent", fields: [fromUserId], references: [id], onDelete: Cascade)
  to          User      @relation("InvitationsReceived", fields: [toUserId], references: [id], onDelete: Cascade)

  @@index([workspaceId, toUserId])
}

model WorkspaceCollaborator {
  id          String    @id @default(cuid())
  workspaceId String
  userId      String
  joinedAt    DateTime  @default(now())
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, userId])
  @@index([userId, joinedAt])
}

model PseudoFile {
  id          String        @id @default(cuid())
  workspaceId String
  name        String
  content     String        @default("")
  updatedAt   DateTime      @updatedAt
  workspace   Workspace     @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  versions    FileVersion[]

  @@unique([workspaceId, name])
}

model FileVersion {
  id        String     @id @default(cuid())
  fileId    String
  content   String
  authorId  String?
  message   String?
  createdAt DateTime   @default(now())
  file      PseudoFile @relation(fields: [fileId], references: [id], onDelete: Cascade)
  author    User?      @relation(fields: [authorId], references: [id], onDelete: SetNull)

  @@index([fileId, createdAt])
}
